# ARCGen-Python

./: .gitignore  Quick Start Guide  Quick Start Guide.txt  README.md  arcgen.py  data.csv  pyproject.toml  requirements.txt  setup.py
ExampleCasesAndDatasets/: example_KroellThoracicImpact.py  example_LessleyParabolas.py  example_MattucciLigaments.py  example_Nbdl15gFrontal_Accel.py  example_Nbdl15gFrontal_Disp.py
ExampleCasesAndDatasets/Kroell_ThoracicImpactResponse/: KroellThoracicImpactResponse.csv
ExampleCasesAndDatasets/LessleyParabolas/: LessleyParabolas_CroppedEndings.csv  LessleyParabolas_CroppedStarts.csv  LessleyParabolas_MiddlePortions.csv  LessleyParabolas_WithOutlier.csv
ExampleCasesAndDatasets/Mattucci_CervicalLigaments/: Mattucci_AnteriorLongitudinalLigament_QuasiStatic.csv  Mattucci_CapsularLigament_QuasiStatic.csv  Mattucci_InterspinousLigament_QuasiStatic.csv  Mattucci_LigamentumFlavum_QuasiStatic.csv  Mattucci_PosteriorLongitudinalLigament_QuasiStatic.csv
ExampleCasesAndDatasets/NBDL_15gFrontalDeceleration/: NBDL_15gFrontal_HeadXAccel.csv  NBDL_15gFrontal_HeadXDisp.csv  NBDL_15gFrontal_HeadYRotAccel.csv  NBDL_15gFrontal_HeadYRotDisp.csv  NBDL_15gFrontal_HeadZAccel.csv  NBDL_15gFrontal_HeadZDisp.csv
arcgen/: __init__.py  arcgen.py
arcgen/polygonFunctions/: polygonFunctions.py
arcgen/uniquetol/: uniquetol.py
polygonFunctions/: __init__.py  polygonFunctions.py
tests/: testPolygonFunctions.py  test_PolygonFunctions.py  test_uniquetol.py
uniquetol/: __init__.py  uniquetol.py
